# shelly

./: .gitignore  App.xaml  App.xaml.cs  CLAUDE.md  LICENSE  NotchyWindows.sln  PLAN.md  PROGRESS.md  README.md  Shelly.csproj  Shelly.sln  index.html  opencode.json  package.json  test_sysinfo.rs
Interop/: HotkeyManager.cs  NativeMethods.cs
Models/: TerminalSession.cs  TerminalStatus.cs  UpdateInfo.cs
NotchyWindows/: App.xaml  App.xaml.cs  NotchyWindows.csproj
Resources/: terminal.html
Services/: AppSettings.cs  AutoStartManager.cs  CheckpointManager.cs  ConPtyTerminal.cs  IdeDetector.cs  Logger.cs  SessionPersistence.cs  SessionStore.cs  SoundPlayer.cs  StatusParser.cs  TerminalManager.cs  UpdateChecker.cs
Views/: FloatingPanel.xaml  FloatingPanel.xaml.cs  KeybindingDialog.cs  SessionTabBar.xaml  SessionTabBar.xaml.cs  TerminalHostControl.xaml  TerminalHostControl.xaml.cs  UpdateFlowController.cs
docs/: claude-status-detection-implementation.md
installer/: Shelly.iss
portable/: README.txt
public/: notch.html
shelly-legacy/: App.xaml  App.xaml.cs  Shelly.csproj
shelly-tauri/: index.html  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_detector.rs  display_info.rs  ide_detector.rs  lib.rs  macos_window.rs  main.rs  pty.rs  session_store.rs  settings.rs  sleep_prevention.rs  sound.rs  status_parser.rs  themes_store.rs  tray.rs  util.rs
tools/: bundled-themes.urls.txt  import-vscode-theme.ts  run-bundled-import.ts
(+121 files in other folders)
