[package]
name = "shelly"
version = "0.2.1"
description = "A floating terminal panel with IDE project detection"
authors = ["Ranjan Singh"]
edition = "2021"

[lib]
name = "shelly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
rodio = "0.20"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
dirs = "6"
tauri-plugin-dialog = "2.7.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_System_Power", "Win32_System_Diagnostics_Debug", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSScreen"] }
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }

